# circuits

./: .env.template  .gitignore  GEMMA2_NEURON_EXPORT.md  README.md  pyproject.toml  test_release.sh
circuits/analysis/: circuit_ops.py  cluster.py  label.py  multiview_cluster.py  neuron_export.py  score_features.py  steer.py  visualize_explanations.py
circuits/core/: core.py
circuits/descriptions/: __init__.py  api_backend.py  exemplars.py  label.py  prompts.py  scoring.py  types.py  vllm_backend.py
circuits/evals/: enap.py
circuits/frontend/: graph_models.py  server.py
circuits/frontend/assets/: feature-view.html  index.html  util.js
circuits/tracing/: README.md  attribution.py  clja.py  trace.py  utils.py
circuits/tracing/grad/: __init__.py  gemma2.py  llama.py  qwen3.py
circuits/utils/: constants.py  data_loading_utils.py  descriptions.py  steering_utils.py
custom_automation/: config.py  fetch_neuronpedia_prompts.py  generate_description.py  generate_supernodes.py  render_report.py
custom_automation/prompts/: ground_truth_neuronpedia.csv  neuronpedia_graphs.csv
lib/env_util/: pyproject.toml
lib/env_util/env_util/: env.py
lib/util/util/: dataset.py  subject.py
scripts/: steering.py  train.py
scripts/args/: args.py
scripts/case_studies/: generate_tables.py
scripts/circuit_prep/: batch_export_neurons.py  export_neurons.py  prep.py  prep.sbatch  top_neurons.py
scripts/fc_evals/: edge_eval.sh  node_eval.sh  pair_combined.sh
scripts/neuron_attr_locality/: compare_descriptions.py  describe_neurons.py  heatmap_single_neuron.py  plot.py  plot_attr_detailed.py  plot_comparison.py  plot_contrib_summary.py  plot_summary.py  run_attr.py  run_contrib.py  run_single_neuron.py
sweep/fc_evaluation/: causalgym_pair.yaml  user_modeling_nopair.yaml  user_modeling_pair.yaml
tests/: check_attr_map_sums.py  conftest.py  test_cluster_pipeline.py  test_gemma2_attribution.py
(+98 files in other folders)
