[project]
name = "circuits"
version = "0.0.2"
description = "Circuits discovery and evaluation"

requires-python = "==3.12.*"
dependencies = [
    "util",
    "env_util",
    "neurondb",
    "user_modeling",
    "anthropic>=0.72.0",
    "wandb>=0.19.6",
    "jupyter>=1.0.0",
    "statsmodels>=0.14.0",
    "jupyter-collaboration>=1.2.0",
    "vllm>=0.7.0",
    "treescope>=0.1.9",
    "together>=1.5.7",
    "peft>=0.15.0",
    "pyvene>=0.1.8",
    "plotnine",
    "dictionary_learning",
    "graphviz",
    "nnsight<0.4.0",
    "sae_lens @ git+https://github.com/aryamanarora/SAELens.git",
    "torch==2.5.1",
    "tabulate>=0.9.0",
    "sentence-transformers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["circuits"]

[tool.pyright]
strict = ["circuits"]
reportMissingTypeStubs = false

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
util = { path = "lib/util", editable = true }
env_util = { path = "lib/env_util", editable = true }
neurondb = { path = "lib/neurondb", editable = true }
user_modeling = { path = "lib/user_modeling", editable = true }

# Override vllm to install from source on macOS (PyPI upload is broken)
vllm = { git = "https://github.com/vllm-project/vllm", tag = "v0.7.0", marker = "platform_system == 'Darwin'" }
